// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateNotificationButton: запрос завершен 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 bYJcNk"
    disabled={true}
    display="inline-block"
    onClick={[Function]}
    size="xsmall"
    type="button"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 eZGOHC"
      width="100%"
    >
      <div />
      <div
        className="sc-1jxwge6-0 wterhv-0 irkFkV"
      />
      <div
        className="sc-1jxwge6-0 wterhv-0 irkFkV"
      >
        <div
          className="sc-1jxwge6-0 sc-18ch56c-0 dKrLvQ"
          color="color1"
          fill="inherit"
          fontSize={5}
        >
          <div
            className="sc-181m7t4-0 ckrlTX"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`CreateNotificationButton: запрос завершен ошибкой 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 bYJcNk"
    disabled={true}
    display="inline-block"
    onClick={[Function]}
    size="xsmall"
    type="button"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 eZGOHC"
      width="100%"
    >
      <div />
      <div
        className="sc-1jxwge6-0 wterhv-0 irkFkV"
      />
      <div
        className="sc-1jxwge6-0 wterhv-0 irkFkV"
      >
        <div
          className="sc-1jxwge6-0 sc-18ch56c-0 dKrLvQ"
          color="color1"
          fill="inherit"
          fontSize={5}
        >
          <div
            className="sc-181m7t4-0 ckrlTX"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`CreateNotificationButton: обычное состояние 1`] = `
<div
  className="sc-bxivhb dUiVDW"
>
  <button
    className="mxzgdr-0 bYJcNk"
    disabled={false}
    display="inline-block"
    onClick={[Function]}
    size="xsmall"
    type="button"
  >
    <div
      className="sc-1jxwge6-0 wterhv-0 eZGOHC"
      width="100%"
    >
      <div />
      <div
        className="sc-1jxwge6-0 wterhv-0 irkFkV"
      >
        Request
      </div>
      <div />
    </div>
  </button>
</div>
`;
